--- a/animal.html
+++ b/animal.html
@@ -7,12 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
+
     <header>
-        <title>Mascota</title>
+        <title>Animal</title>
     </header>
 
 
@@ -21,8 +24,8 @@
         <a class="navbar-brand" href="list.html"><img src="assets/Logo-02.png" alt="Smiley face" height="53" width="70"></span>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+                <span class="navbar-toggler-icon"></span>
+            </button>
         <div class="menuHorizontal collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
@@ -35,23 +38,17 @@
                     <a class="nav-link" href="blog.html">Blog <span class="sr-only"></span></a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="whishlist.html">Lista de deseos <span class="sr-only"></span></a>
+                    <a class="nav-link" href="wishlist.html">Lista de deseos <span class="sr-only"></span></a>
                 </li>
             </ul>
-            <form class="form-inline my-2 my-lg-0">
-            </form>
-
-            <button class="LogIn btn btn-outline-light" type="submit"> LogIn -
-                Register
-            </button>
+            <button class="LogIn btn btn-outline-light" type="submit"> LogIn - Register</button>
         </div>
     </nav>
 
     <div class="logo">
-        <img src="assets/Patitas-01.jpg" class="img-responsive" alt="Logo Patitas">
+        <img src="assets/Patitas-01.jpg" class="logo img-responsive" alt="Logo Patitas" title="Patitas">
     </div>
     <hr />
-    </div>
 
     <div class="container">
         <div class="row">
