--- a/list.html
+++ b/list.html
@@ -6,8 +6,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -18,8 +19,7 @@
     </header>
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-md bg-dark navbar-dark">
-        <a class="navbar-brand" href="list.html"><img src="assets/Logo-02.png" alt="Smiley face" height="53"
-                width="70"></span>
+        <a class="navbar-brand" href="list.html"><img src="assets/Logo-02.png" alt="Smiley face" height="53" width="70"></span>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
@@ -108,57 +108,20 @@
                     <div class="col col-12 col-sm-8 col-md-8">
                         <div class="row">
                             <div class="col col-12 col-sm-12 col-md-6 col-lg-4">
-                                    <i class="btn material-icons">delete</i>
                                 <div class="card cardLista">
                                     <img src="assets/dog_10.jpg" class="card-img-top" alt="... ">
-                                    <img class="wish card-img-overlay card-imagen d-flex"
-                                        src="assets/icono_heart.png">
                                     <div class="card-body">
                                         <h5 class="card-title">Max</h5>
                                         <p class="card-text">
-                                            Some quicktitle and make up the bulk of the card's content.
+                                            Some quicktitle and make up the bulk of the card's content.Some quicktitle and make up the bulk of the card's content.Some quicktitle and make up the bulk of the card's content.
                                         </p>
                                         <a href="animal.html" class="btn btn-primary btn-block">Ver</a>
                                     </div>
                                 </div>
                             </div>
-
                             <div class="col col-12 col-sm-12 col-md-6 col-lg-4">
-                                <div class="card">
-                                    <img src="assets/dog_09.jpg" class="card-img-top" alt="... ">
-                                   
-                                    <img class="wish card-img-overlay.material-icons d-flex"
-                                        src="assets/heart.png">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Max</h5>
-                                        <p class="card-text">
-                                            Some quicktitle and make up the bulk of the card's content.
-                                        </p>
-                                        <a href="animal.html" class="btn btn-primary btn-block">Ver</a>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="col col-12 col-sm-12 col-md-6 col-lg-4">
-                                <div class="card">
-                                    <img src="assets/dog_08.jpg" class="card-img-top" alt="... ">
-                                    <img class="wish btn btn-block card-img-overlay card-imagen d-flex align-items-center"
-                                        src="assets/icono_heart.png">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Max</h5>
-                                        <p class="card-text">
-                                            Some quicktitle and make up the bulk of the card's content.
-                                        </p>
-                                        <a href="animal.html" class="btn btn-primary btn-block">Ver</a>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="col col-12 col-sm-12 col-md-6 col-lg-4">
-                                <div class="card">
+                                <div class="card cardLista">
                                     <img src="assets/dog_10.jpg" class="card-img-top" alt="... ">
-                                    <img class="wish btn btn-block card-img-overlay card-imagen d-flex align-items-center"
-                                        src="assets/heart.png">
                                     <div class="card-body">
                                         <h5 class="card-title">Max</h5>
                                         <p class="card-text">
@@ -168,16 +131,61 @@
                                     </div>
                                 </div>
                             </div>
-
+                            <div class="col col-12 col-sm-12 col-md-6 col-lg-4">
+                                <div class="card cardLista">
+                                    <img src="assets/dog_10.jpg" class="card-img-top" alt="... ">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Max</h5>
+                                        <p class="card-text">
+                                            Some quicktitle and make up the bulk of the card's content.
+                                        </p>
+                                        <a href="animal.html" class="btn btn-primary btn-block">Ver</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col col-12 col-sm-12 col-md-6 col-lg-4">
+                                <div class="card cardLista">
+                                    <img src="assets/dog_10.jpg" class="card-img-top" alt="... ">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Max</h5>
+                                        <p class="card-text">
+                                            Some quicktitle and make up the bulk of the card's content.
+                                        </p>
+                                        <a href="animal.html" class="btn btn-primary btn-block">Ver</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col col-12 col-sm-12 col-md-6 col-lg-4">
+                                <div class="card cardLista">
+                                    <img src="assets/dog_10.jpg" class="card-img-top" alt="... ">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Max</h5>
+                                        <p class="card-text">
+                                            Some quicktitle and make up the bulk of the card's content.
+                                        </p>
+                                        <a href="animal.html" class="btn btn-primary btn-block">Ver</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col col-12 col-sm-12 col-md-6 col-lg-4">
+                                <div class="card cardLista">
+                                    <img src="assets/dog_10.jpg" class="card-img-top" alt="... ">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Max</h5>
+                                        <p class="card-text">
+                                            Some quicktitle and make up the bulk of the card's content.
+                                        </p>
+                                        <a href="animal.html" class="btn btn-primary btn-block">Ver</a>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <aside class="serchVerticalR col col-12 col-sm-4 col-md-2 col-lg-2">
                         <hr />
-                        <a href="https://freshpet.com/" target="_blank"><img src="assets/publicidad_01.jpg"
-                                class="card-img-top" alt="... "></a>
+                        <a href="https://freshpet.com/" target="_blank"><img src="assets/publicidad_01.jpg" class="card-img-top" alt="... "></a>
                         <hr />
-                        <a href="https://freshpet.com/" target="_blank"><img src="assets/publicidad_02.jpg"
-                                class="card-img-top" alt="... "></a>
+                        <a href="https://freshpet.com/" target="_blank"><img src="assets/publicidad_02.jpg" class="card-img-top" alt="... "></a>
                         <hr />
                     </aside>
                 </div>
@@ -193,22 +201,16 @@
     <!--FOOTER-->
     <hr />
     <footer>
-        <p class="copyright">Copyright © 2019 <a href="mailto:l.besil@gmail.com" target="_blank">Luis Besil</a>.
+        <p class="copyright">Copyright © 2019 <a href="mailto:l.besil@gmail.com">Luis Besil</a>.
             <span class="second-line">All Rights Reserved.</span>
         </p>
     </footer>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
 </body>
 
