--- a/list.html
+++ b/list.html
@@ -201,9 +201,12 @@
     <!--FOOTER-->
     <hr />
     <footer>
-        <p class="copyright">Copyright © 2019 <a href="mailto:l.besil@gmail.com">Luis Besil</a>.
-            <span class="second-line">All Rights Reserved.</span>
-        </p>
+        <div class="footer">
+            <p class="copyright">Copyright © 2019 <a href="mailto:l.besil@gmail.com">Luis
+                            Besil</a>.
+                <span>All Rights Reserved.</span>
+            </p>
+        </div>
     </footer>
 
     <!-- Optional JavaScript -->
