--- a/newAnimal.html
+++ b/newAnimal.html
@@ -7,10 +7,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
+
+    <header>
+        <title>Lista</title>
+    </header>
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-md bg-dark navbar-dark">
         <a class="navbar-brand" href="list.html"><img src="assets/Logo-02.png" alt="Smiley face" height="53" width="70"></span>
@@ -30,23 +36,18 @@
                     <a class="nav-link" href="blog.html">Blog <span class="sr-only"></span></a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="whishlist.html">Lista de deseos <span class="sr-only"></span></a>
+                    <a class="nav-link" href="wishlist.html">Lista de deseos <span class="sr-only"></span></a>
                 </li>
             </ul>
-            <form class="form-inline my-2 my-lg-0">
-            </form>
-
-            <button class="LogIn btn btn-outline-light" type="submit"> LogIn -
-                Register
-            </button>
+            <button class="LogIn btn btn-outline-light" type="submit"> LogIn - Register</button>
         </div>
     </nav>
 
     <div class="logo">
-        <img src="assets/Patitas-01.jpg" class="img-responsive" alt="" title="">
-
+        <img src="assets/Patitas-01.jpg" class="logo img-responsive" alt="Logo Patitas" title="Patitas">
     </div>
     <hr />
+
 
     <div class="titulo">
         <blockquote class="blockquote text-center">
@@ -254,9 +255,12 @@
     <!--FOOTER-->
     <hr />
     <footer>
-        <p class="copyright">Copyright © 2019 <a href="mailto:l.besil@gmail.com" target="_blank">Luis Besil</a>.
-            <span class="second-line">All Rights Reserved.</span>
-        </p>
+        <div class="footer">
+            <p class="copyright">Copyright © 2019 <a href="mailto:l.besil@gmail.com">Luis
+                            Besil</a>.
+                <span>All Rights Reserved.</span>
+            </p>
+        </div>
     </footer>
 
     <!-- Optional JavaScript -->
