--- a/wishlist.html
+++ b/wishlist.html
@@ -6,23 +6,20 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
     <link rel="stylesheet" href="styles.css">
-    <!-- jQuery -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
 </head>
 
 <body>
+
     <header>
-        <title>Lista de Deseos</title>
+        <title>Wishlist</title>
     </header>
-
-
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-md bg-dark navbar-dark">
-        <a class="navbar-brand" href="list.html"><img src="assets/Logo-02.png" alt="Smiley face" height="53"
-                width="70"></span>
+        <a class="navbar-brand" href="list.html"><img src="assets/Logo-02.png" alt="Smiley face" height="53" width="70"></span>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
@@ -30,140 +27,100 @@
         <div class="menuHorizontal collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="trans nav-link" href="list.html">Inicio <span class="sr-only"></span></a>
+                    <a class="nav-link" href="list.html">Inicio <span class="sr-only"></span></a>
                 </li>
                 <li class="nav-item active">
-                    <a class="trans nav-link" href="newAnimal.html">Nuevo <span class="sr-only"></span></a>
+                    <a class="nav-link" href="newAnimal.html">Nuevo <span class="sr-only"></span></a>
                 </li>
                 <li class="nav-item active">
-                    <a class="trans nav-link" href="blog.html">Blog <span class="sr-only"></span></a>
+                    <a class="nav-link" href="blog.html">Blog <span class="sr-only"></span></a>
                 </li>
                 <li class="nav-item active">
-                    <a class="trans nav-link" href="wishlist.html">Lista de deseos <span class="sr-only"></span></a>
+                    <a class="nav-link" href="wishlist.html">Lista de deseos <span class="sr-only"></span></a>
                 </li>
             </ul>
-
-
-            <ul class="nav-item">
-                <li class="nav-item">
-                    <figure class="figure">
-                        <a href="https://www.facebook.com" target="_blank"><img
-                                src="https://img.icons8.com/color/30/000000/facebook.png"></a>
-                    </figure>
-                </li>
-                <li class="trans nav-item">
-                    <figure class="figure">
-                        <a href="https://www.instagram.com" target="_blank"><img
-                                src="https://img.icons8.com/color/30/000000/instagram-new.png"></a>
-                    </figure>
-                </li>
-                <li class="nav-item">
-                    <figure class="figure">
-                        <a href="https://www.twitter.com" target="_blank"><img
-                                src="https://img.icons8.com/color/30/000000/twitter.png"></a>
-                    </figure>
-                </li>
-                <li class="nav-item">
-                    <figure class="figure">
-                        <a href="https://fedsenpai.slack.com/messages" target="_blank"><img
-                                src="https://img.icons8.com/color/30/000000/slack.png"></a>
-                    </figure>
-                </li>
-            </ul>
-
-            <br>
-            <button class="LogIn btn btn-outline-light " type="submit "> LogIn -
-                Register
-            </button>
+            <button class="LogIn btn btn-outline-light" type="submit"> LogIn - Register</button>
         </div>
     </nav>
 
+    <div class="logo">
+        <img src="assets/Patitas-01.jpg" class="logo img-responsive" alt="Logo Patitas" title="Patitas">
+    </div>
+    <hr />
+
     <main>
-        <section>
-            <div class="logo">
-                <img src="assets/Patitas-01.jpg" class="img-responsive" alt="" title="">
-
-            </div>
-            <hr />
-
-            <div class="titulo">
-                <blockquote class="blockquote text-center">
-                    <p class="mb-0">
-                        <h2 class="txt m-txt_tight m-txt_colorPrimary">Whishlist</h2>
-                    </p>
-                </blockquote>
-            </div>
-            <hr />
-
-            <!-- Card -->
 
 
-            <div class="container">
-                <div class="row justify-content-center" id="animal-list">
-                    <div class="col col-12 col-sm-12 col-md-6 col-lg-4">
-                        <div class="card cardLista">
-                            <img src="assets/dog_10.jpg" class="card-img-top" alt="... ">
-                            <div class="card-body">
-                                <h5 class="card-title">Max</h5>
-                                <button type="button" class="btn btn-danger btn-outline-dark btnCerrarCard">x</button>
-                                <p class="card-text">
-                                    Some quicktitle and make up the bulk of the card's content.
-                                </p>
-                                <button type="button" class="btn btn-success btn-block">Adoptar</button>
+        <div class="titulo">
+            <blockquote class="blockquote text-center">
+                <p class="mb-0">
+                    <h2 class="txt m-txt_tight m-txt_colorPrimary">Whishlist</h2>
+                </p>
+            </blockquote>
+        </div>
+        <hr />
+
+        <!-- Card -->
+        <div class="container-fluid">
+            <div class="row">
+                <div class="serchVerticalL col col-2 d-none d-md-block">
+                    <hr />
+                    <a href="https://freshpet.com/" target="_blank"><img src="assets/publicidad_02.jpg" class="card-img-top" alt="... "></a>
+                    <hr />
+                </div>
+                <div class="col col-12 col-sm-8 col-md-8">
+                    <div class="row">
+                        <div class="col col-12 col-sm-12 col-md-6 col-lg-4">
+                            <div class="card cardLista">
+                                <img src="assets/dog_06.jpg" class="card card-img-top" alt="... ">
+                                <button type="button" class="btn btn-sm btn-outline-danger card-imagen"><i class="material-icons">delete</i></button>
+                                <div class="card-body">
+                                    <h5 class="card-title">Max</h5>
+                                    <p class="card-text">
+                                        Some quicktitle and make up the bulk of the card's content.Some quicktitle and make up the bulk of the card's content.Some quicktitle and make up the bulk of the card's content.
+                                    </p>
+                                    <a href="animal.html" class="btn btn-primary btn-block">Ver</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col col-12 col-sm-12 col-md-6 col-lg-4">
+                            <div class="card cardLista">
+                                <img src="assets/dog_07.jpg" class="card card-img-top" alt="... ">
+                                <button type="button" class="btn btn-sm btn-outline-danger card-imagen"><i class="material-icons">delete</i></button>
+                                <div class="card-body">
+                                    <h5 class="card-title">Dante</h5>
+                                    <p class="card-text">
+                                        Some quicktitle and make up the bulk oe and make up the bulk of the card's content.Some quicktitle and make up the bulk of the card's content.
+                                    </p>
+                                    <a href="animal.html" class="btn btn-primary btn-block">Ver</a>
+                                </div>
                             </div>
                         </div>
                     </div>
-                    <div class="col col-12 col-sm-4 col-md-4">
-                            <div class="card-wishlist">
-                                <div class="card-body">
-                                    <img src="assets/Logo-03.png" class="rounded-circle">
-                                    <h3 class="card-titleWish">Doki</h3>
-                                    <button type="button" class="btn btn-danger btn-outline-dark btnCerrarCard">x</button>
-                                    <h5 class="card-text">21/04/2019</h5>
-                                    <h5 class="card-titleWish">Bulldog Francés</h5>
-                                    <hr />
-                                    
-                                    <h4 class="card-titleWish">Datos del Contacto</h4>
-                                    <ul class="ulWishlist">
-                                        <li>Luis Besil</li>
-                                        <li>094 236 444</li>
-                                        <li>l.besil@observador.com.uy</li>
-                                    </ul>
-                                    <hr />
-                                    <button type="button" class="btn btn-success btn-block">Adoptar</button>
-                                    <br />
-                                </div>
-                            </div>
-                            </div>
                 </div>
+                <aside class="serchVerticalR col col-12 col-sm-4 col-md-2 col-lg-2">
+                    <hr />
+                    <a href="https://freshpet.com/" target="_blank"><img src="assets/publicidad_01.jpg" class="card-img-top" alt="... "></a>
+                    <hr />
+                </aside>
             </div>
+        </div>
         </section>
     </main>
 
     <!--FOOTER-->
     <hr />
     <footer>
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col col-12">
-                    <p class="copyright">Copyright © 2019 <a href="mailto:l.besil@gmail.com " target="_blank">Luis
+        <div class="footer">
+            <p class="copyright">Copyright © 2019 <a href="mailto:l.besil@gmail.com">Luis
                             Besil</a>.
-                        <span class="second-line ">All Rights Reserved.</span>
-                    </p>
-
-                </div>
-            </div>
+                <span>All Rights Reserved.</span>
+            </p>
         </div>
     </footer>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js "
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo "
-        crossorigin="anonymous "></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js "
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1 "
-        crossorigin="anonymous "></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js "
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM "
-        crossorigin="anonymous "></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js " integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo " crossorigin="anonymous "></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js " integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1 " crossorigin="anonymous "></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js " integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM " crossorigin="anonymous "></script>
 
 
 </body>
