--- a/animal.html
+++ b/animal.html
@@ -17,15 +17,13 @@
     <header>
         <title>Animal</title>
     </header>
-
-
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-md bg-dark navbar-dark">
         <a class="navbar-brand" href="list.html"><img src="assets/Logo-02.png" alt="Smiley face" height="53" width="70"></span>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+            <span class="navbar-toggler-icon"></span>
+        </button>
         <div class="menuHorizontal collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
@@ -50,128 +48,113 @@
     </div>
     <hr />
 
+
+
     <div class="container">
         <div class="row">
-            <div class="col col-12 col-sm-12 col-md-12 col-lg-12">
-                <div class="card cardAnimal">
-                    <img class="card-img-top imagen" src="assets/cat-1045782_1920b.jpg" alt="Card image">
-                    <div class="card">
-                        <div>
-
-                            <h4 class="card-title">Nombre: Doki</h4>
-                            <p class="card-text">Birthday: 21/04/2019</p>
-                        </div>
-                        <div class="card-body">
-                            <h4 class="card-title font-weight-bold"><a>Tipo: Bulldog Francés</a></h4>
-                            <hr class="">
-                            <ul class="">
-                                <li class="">Color de pelo</li>
-                                <li class="">Color de ojos</li>
-                            </ul>
-                            <hr class="">
-                            <p class="lead"><strong>Descripción</strong></p>
-                            <ul class="list-unstyled">
-                                <li class="list-inline-item">
-
-                                    <p class="text-muted">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. Lorem ipsum
-                                        dolor, sit amet consectetur adipisicing elit. Reprehenderit deserunt veniam tempora quibusdam blanditiis sequi sapiente voluptates dolorem fuga, repellendus corrupti dolore. Nostrum quos soluta explicabo, ea vel
-                                        veniam optio tempore, fuga magnam odio ullam similique rem est? Cupiditate, eos.
-                                    </p>
-                                </li>
-                            </ul>
-                            <hr class="">
-                            <p class="lead"><strong>Datos del Contacto</strong></p>
-                            <ul class="">
-                                <li class="">Nombre</li>
-                                <li class="">Telefono</li>
-                                <li class="">Email</li>
-                            </ul>
-                            <button type="button" class="btn btn-info">Contactar</button>
-                            <hr class="my-4">
-                            <p class="lead"><strong>Barrio: La Comercial</strong></p>
-                            <hr class="my-4">
-                            <!-- Button -->
-                            <button type="button" class="btn btn-success btn-block btn">Adoptar</button>
-                        </div>
+            <div class="col col-sm-12 col-md-6">
+                <div class="card cardAnimal card-body">
+                    <div class="cardFicha">
+                        <h4 class="card-title font-weight-bold">Doki</h4>
+                        <h4 class="card-title">Bulldog Francés</h4>
                     </div>
+                    <hr />
+                    <h4 class="card-text">Características</h4>
+                    <ul class="card-text">
+                        <li>
+                            <p>Nació el: 21/04/2019</p>
+                        </li>
+                        <li>
+                            <p>Color de pelo: Negro</p>
+                        </li>
+                        <li>
+                            <p>Color de ojos: Marrón</p>
+                        </li>
+                    </ul>
+                    <hr />
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. Lorem ipsum dolor, sit amet
+                        consectetur adipisicing elit. Reprehenderit deserunt veniam tempora quibusdam blanditiis sequi sapiente voluptates dolorem fuga, repellendus corrupti dolore. Nostrum quos soluta explicabo, ea vel veniam optio tempore, fuga magnam
+                        odio ullam similique rem est? Cupiditate, eos.
+                    </p>
+                    <a href="wishlist.html"><button type="button" class="btn btn-secondary btn-block shadow p-1 rounded">Agregar a la Wishlist</button></a>
+                    <hr />
+
+                    <h4 class="card-text">Datos del Contacto</h4>
+                    <ul class="card-text">
+                        <li>
+                            <p>Nombre: Luis Besil</p>
+                        </li>
+                        <li>
+                            <p>Telefono / Celular: 094 236 444</p>
+                        </li>
+                        <li>
+                            <p>Email: l.besil@gmail.com</p>
+                        </li>
+                        <li>
+                            <p>Barrio: Parque Batlle</p>
+                        </li>
+                    </ul>
+                    <a href="mailto:"><button type="button" class="btn btn-info btn-block shadow p-2 rounded">Contactar</button></a>
+                    <hr />
+                    <!-- Button -->
+                    <button type="button" class="btn btn-success btn-block shadow p-3 rounded">Adoptar</button>
                 </div>
             </div>
-            <div class="col col-sm-12">
-                <div class="row miniaturas">
-                    <div class="col col-4 col-sm-6 col-md-2 col-lg-2">
-                        <div class="card">
-                            <a href="#" data-toggle="modal" data-target="#miModal"><img src="assets/carr_01.jpg" class="card-img-top" alt="imagen de mascota"></a>
+
+            <div class="col col-sm-12 col-md-6">
+                <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="assets/carr_01.jpg" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="assets/carr_02.jpg" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="assets/carr_03.jpg" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="assets/carr_04.jpg" class="d-block w-100" alt="...">
                         </div>
                     </div>
-                    <div class="col col-4 col-sm-6 col-md-2 col-lg-2">
-                        <div class="card">
-                            <a href="#" data-toggle="modal" data-target="#miModal"><img src="assets/carr_02.jpg" class="card-img-top" alt="imagen de mascota"></a>
-                        </div>
-                    </div>
-                    <div class="col col-4 col-sm-6 col-md-2 col-lg-2">
-                        <div class="card">
-                            <a href="#" data-toggle="modal" data-target="#miModal"><img src="assets/carr_03.jpg" class="card-img-top" alt="imagen de mascota"></a>
-                        </div>
-                    </div>
-                    <div class="col col-4 col-sm-6 col-md-2 col-lg-2">
-                        <div class="card">
-                            <a href="#" data-toggle="modal" data-target="#miModal"><img src="assets/carr_04.jpg" class="card-img-top" alt="imagen de mascota"></a>
-                        </div>
-                    </div>
-                    <div class="col col-4 col-sm-6 col-md-2 col-lg-2">
-                        <div class="card">
-                            <a href="#" data-toggle="modal" data-target="#miModal"><img src="assets/carr_01.jpg" class="card-img-top" alt="imagen de mascota"></a>
-                        </div>
-                    </div>
-                    <div class="col col-4 col-sm-6 col-md-2 col-lg-2">
-                        <div class="card">
-                            <a href="#" data-toggle="modal" data-target="#miModal"><img src="assets/carr_02.jpg" class="card-img-top" alt="imagen de mascota">
-                            </a>
-                        </div>
-                    </div>
+                    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
                 </div>
+                <hr />
+                <a href="https://freshpet.com/ " target="_blank "><img src="assets/publicidad_04.jpg" class="card-img-top " alt="... "></a>
             </div>
+
         </div>
     </div>
 
-    <section>
-        <!-- The Modal -->
-        <div class="modal" id="miModal">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <!-- Modal Header -->
-                    <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    </div>
-                    <!-- Modal body -->
-                    <div class="modal-body">
-                        <img src="assets/carr_01.jpg" class="card-img-top" alt="... ">
-                    </div>
-
-                    <!-- Modal footer -->
-                    <div class="modal-footer">
-
-                    </div>
-
-                </div>
-            </div>
-        </div>
-    </section>
 
 
     <!--FOOTER-->
     <hr />
     <footer>
-        <p class="copyright">Copyright © 2019 <a href="mailto:l.besil@gmail.com" target="_blank">Luis Besil</a>.
-            <span class="second-line">All Rights Reserved.</span>
-        </p>
+        <div class="footer">
+            <p class="copyright">Copyright © 2019 <a href="mailto:l.besil@gmail.com">Luis
+                            Besil</a>.
+                <span>All Rights Reserved.</span>
+            </p>
+        </div>
     </footer>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js " integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo " crossorigin="anonymous "></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js " integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1 " crossorigin="anonymous "></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js " integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM " crossorigin="anonymous "></script>
 
 </body>
+<script src="datos.js"></script>
+<script src="lista.js"></script>
+
 
 </html>
